--- a/lead_scoring.ipynb
+++ b/lead_scoring.ipynb
@@ -8817,7 +8817,7 @@
     "Precision = 73.84% <br>\n",
     "Recall = 81.01%\n",
     "\n",
-    "Pada tujuan awal kita, CEO ingin mengidentifikasi prospek yang akan dikonversi. Karena menggunakan nilai thresholds menyebabkan TP berkurang dan False Positive meningkat dan hal tersebut memperbesar nilai recall, maka kita akan menggunakan thresholds."
+    "Pada tujuan awal kita, CEO ingin mengidentifikasi prospek yang akan dikonversi. Karena dengan menggunakan nilai thresholds menyebabkan FN berkurang dan False Positive meningkat dan hal tersebut memperbesar nilai recall, maka kita akan menggunakan nilai thresholds."
    ]
   },
   {
